--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -3,11 +3,14 @@ on: [push, pull_request]
 jobs:
   validate:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [18, 20]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
+          node-version: ${{ matrix.node }}
       - run: npm install
       - run: npm run validate
